<resources>
    <string name="app_name">Entish</string>


    <string name="title_activity_home">HomeActivity</string>

    <!-- MENU BAR CHAT_ROOMS-->
    <string name="nav_button_home">Home</string>
    <string name="nav_button_chats">Chats</string>
    <string name="nav_button_connections">Connections</string>
    <string name="nav_button_weather">Weather</string>
    <string name="nav_button_account">Account</string>

    <!--LOGIN / REGISTER -->
    <string name="text_login_btn">Login</string>
    <string name="text_login_verify_btn">Verify Account</string>
    <string name="text_register_btn">Register</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_password2">Re-enter password</string>


    <!--VERIFY-->
    <string name="text_verify_message">Enter your Email and the 4 Digit Code From Your Email</string>
    <string name="text_resend_message">Didn\'t receive your email?
        Enter your username and the email you want the code to be sent to and we will send a new one</string>
    <string name="text_verify_btn">Verify</string>
    <string name="text_resend_btn">Resend Email</string>
    <string name="text_verify_editText_Hint">4 Digit Code</string>

    <!--ACCOUNT-->
    <string name="action_logout">Logout</string>
    <string name="text_account_title">Account</string>
    <string name="text_account_username">Username:</string>
    <string name="text_account_email">Email:</string>
    <string name="switch_account_stay_logged_in">Stay Logged In </string>

    <!-- Connections-->
    <string name="button_Text_add_new_connection">Add New Connection</string>
    <string name="text_connections">Connections</string>
    <string name="text_connection">Connection</string>
    <string name="text_Status">Status:</string>
    <string name="text_accept">Accept</string>
    <string name="text_reject">Reject</string>
    <string name="text_select_recipients"> Select all you want to chat with:</string>
    <string name="text_confirm"> Confirm</string>
    <string name="text_pending">Pending</string>
    <string name="text_denied">Denied</string>
    <string name="text_delete_contact">Delete Contact</string>
    <string name="text_search_by_username">Search for new Connection by Username</string>
    <string name="text_send_email">Send email invitation link to new user</string>
    <string name="text_new_connection_button_send">Send</string>
    <string name="text_confirm_new_connection">Do you want to accept this connection?</string>
    <string name="text_start_conversation">Start New Conversation</string>
    <string name="text_search_button">Search</string>
    <string name="button_new_connection">New Connection</string>


    <!--Weather-->
    <string name="text_search_by_zip">Search By Zip Code</string>
    <string name="text_go_to_favorite_locations">My Favorite Locations</string>
    <string name="text_zip_code">Zip Code</string>
    <string name="text_weather_title">Where would you like to search?</string>
    <string name="text_Search_on_map">Search by Map Location</string>
    <string name="text_weather_Wind">Wind: </string>
    <string name="text_weather_Humidity">Humidity: </string>
    <string name="text_weather_Temp">Temperature: </string>
    <string name="text_weather_add_to_favs">Save to Favorites</string>
    <string name="text_weather_save">Save</string>
    <string name="text_weather_name">Name</string>
    <string name="text_weather_current_weather">Current Weather:</string>
    <string name="text_weather_hourlyforecast">24-Hour Forecast:</string>
    <string name="text_weather_tendayforecast">10-Day Forecast:</string>
    <string name="text_add_a_nickname">Add a nickname for this location:</string>


    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
