<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/butt_navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_button_home" />

    <item
        android:id="@+id/butt_navigation_conversations"
        app:actionViewClass="android.widget.TextView"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/nav_button_chats"
        />


    <item
        android:id="@+id/butt_navigation_connections"
        android:icon="@drawable/ic_account_box"
        android:title="@string/nav_button_connections"
        app:actionViewClass="android.widget.TextView" />

    <item
        android:id="@+id/butt_navigation_weather"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_button_weather"
        android:titleCondensed="@string/nav_button_weather" />
        <item
            android:id="@+id/butt_navigation_account"
            android:icon="@drawable/ic_account_settings_foreground"
            android:orderInCategory="100"
            android:title="@string/text_account_title" />
        <!--app:showAsAction="never" />-->
    </group>

</menu>

